new content SideEffect

--- a/src/main/frontend/sonstiges/INSERT INTO side_effect_content (id, num.html
+++ b/src/main/frontend/sonstiges/INSERT INTO side_effect_content (id, num.html
@@ -174,3 +174,35 @@ INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose
 ');
 INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (36,4,0,13,4,' Untersuchungen ','Muskelkrämpfe, Gesichtsrötung (Flush), Ohrgeräusche (Tinnitus), Unwohlsein, Fieber.
 ');
+
+
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (37,6,0,14,6,' Erkrankungen des Immunsystems ','Überempfindlichkeitsreaktionen einschließlich Juckreiz, Nesselsucht (Urtikaria), Schwellung im Mund-Rachenbereich (Quincke-Ödem), Hautausschlag (Exanthem), Bronchialkrampf (Bronchospasmus), Blutdruckabfall und Kollaps.
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (38,2,0,14,2,' Stoffwechsel- und Ernährungsstörungen
+','Erhöhter Blutzuckergehalt (Hyperglykämie).
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (39,6,0,14,6,' Stoffwechsel- und Ernährungsstörungen ','Senkung des Blut-Kaliumspiegels (Hypokaliämie): unter der Therapie mit Beta2- Agonisten kann es möglicherweise zu einer sehr ausgeprägten Senkung des BlutkaliumSpiegels kommen; Übersäuerung des Blutes (Laktatazidose).
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (40,6,0,14,6,' Psychiatrische Erkrankungen
+','Schlaflosigkeit (Insomnie) ');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (41,2,0,14,2,' Erkrankungen des Nervensystems ','Zittern (Tremor), Kopfschmerzen
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (42,3,0,14,3,' Erkrankungen des Nervensystems ','Unruhe
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (43,6,0,14,6,' Erkrankungen des Nervensystems ','Schwindel');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (44,2,0,14,2,' Herzerkrankungen
+','Herzrasen (Tachykardie). Herzrhythmusstörungen einschließlich Vorhofflimmern, Anstieg der Herzfrequenz (supraventrikuläre Tachykardie) und unregelmäßigem Puls (ventrikuläre Extrasystolie), Brustenge (pektanginöse Beschwerden) und Herzklopfen (Palpitationen), Sauerstoffmangel am Herzmuskel (myokardiale Ischämie)
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (45,6,0,14,6,' Herzerkrankungen
+','Minderdurchblutung des Herzmuskels (Myokardischämie).
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (46,6,0,14,6,' Gefäßerkrankungen ','Periphere Erweiterung der Blutgefäße
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (47,6,0,14,6,' Erkrankungen der Atemwege, des Brustraums und Mediastinums ','Husten, Bronchialkrampf (paradoxer Bronchospasmus), Reizung im Rachenbereich. <br> <b>Hinweis</b> <br> Wie bei anderen Inhalationstherapien kann nach der Anwendung von Salbutamol ein Bronchialkrampf auftreten mit einer sofortigen Zunahme des Giemens (Keuchens). In diesem Fall sollte sofort ein anderes bronchienerweiterndes Arzneimittel mit schnellem Wirkungseintritt inhaliert werden. Die Behandlung mit Salbutamol soll unverzüglich abgebrochen und der behandelnde Arzt informiert werden. Dieser entscheidet, ob weitere Maßnahmen erforderlich sind.
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (48,3,0,14,3,' Erkrankungen des Gastrointestinaltrakts ','Reizung im Mund oder Rachenbereich und Änderung des Geschmackempfindens.
+');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (49,3,0,14,3,' Skelettmuskulatur-, Bindegewebs- und Knochenerkrankungen ','Muskelkrämpfe');
+INSERT INTO side_effect_content (id, number, state,iddrug, idside_effect,purpose, text )VALUES (50,4,0,14,4,' Skelettmuskulatur-, Bindegewebs- und Knochenerkrankungen
+','Störungen beim Wasserlassen, Sodbrennen sowie Blutdrucksteigerungen oder -senkungen .');
+
