--- a/src/main/frontend/sonstiges/enampril.html
+++ b/src/main/frontend/sonstiges/enampril.html
@@ -1071,7 +1071,7 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic) VALUE
 <div class="row content_header" style="margin-top: 30px;">
     <h3 class="modal-title xs-center">Weitere Informationen</h3>
     <hr />
-    <div class="col-md-12">
+    <div class="col-md-12 xs_nopadd">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
                 <div class="panel-heading head_panel" role="tab" id="headingOne">
