--- a/src/main/frontend/sonstiges/enampril.html
+++ b/src/main/frontend/sonstiges/enampril.html
@@ -1189,7 +1189,26 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic) VALUE
     </div>
 </div>
 ',13,6);
-INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic) VALUES (118,0,'Beispieltext',13,7);
+INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic) VALUES (118,0,'
+<h3><i class="fas fa-exclamation-triangle epillcolor"></i> Hinweis</h3>
+<p>Bewahren Sie dieses Arzneimittel für Kinder unzugänglich auf.</p>
+<hr>
+<h3><i class="fas fa-archive epillcolor"></i> Lagerbedingung</h3>
+<p><b>Nicht über 25 °C</b> lagern. <br> In der Originalverpackung aufbewahren, um den Inhalt vor
+    Feuchtigkeit zu schützen.</p>
+<hr>
+<h3><i class="far fa-calendar-alt epillcolor"></i> Verfallsdatum</h3>
+<p>Sie dürfen dieses Arzneimittel nach dem auf dem Umkarton
+    und den Blisterpackungen nach „Verwendbar bis“
+    angegebenen Verfalldatum nicht mehr verwenden. Das Verfalldatum bezieht sich auf den letzten Tag des angegebenen
+    Monats.</p>
+<hr>
+<h3><i class="fas fa-trash-alt epillcolor"></i> Entsorgung des Medikaments</h3>
+<p>Entsorgen Sie Arzneimittel nicht im Abwasser. <br>Fragen Sie
+    Ihren Apotheker, wie das Arzneimittel zu entsorgen ist, wenn
+    Sie es nicht mehr verwenden. Sie tragen damit zum Schutz
+    der Umwelt bei.</p>
+',13,7);
 INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic) VALUES (119,0,'
 <!-- Allgemein -->
 <div class="row" style="padding-left: 15px;">
