--- a/src/main/frontend/sonstiges/enampril.html
+++ b/src/main/frontend/sonstiges/enampril.html
@@ -540,29 +540,29 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic, addre
 <div class="row">
     <h3>Pharmazeutischer Unternehmer </h3>
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-9 col-xs-12">
             <div class="row">
-                <div class="col-sm-1 addressicons"><i class="fas fa-building"></i></div>
-                <div class="col-sm-11 addresstext"> ALIUD PHARMA&#174; GmbH </div>
-                <div class="col-sm-1 addressicons"><a target="_blank"
+                <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-building"></i></div>
+                <div class="col-sm-11 col-xs-10 addresstext"> ALIUD PHARMA&#174; GmbH </div>
+                <div class="col-sm-1 col-xs-2 addressicons"><a target="_blank"
                         href="https://www.google.com/maps/dir//ALIUD+PHARMA+GmbH,+Gottlieb-Daimler-Stra%C3%9Fe+19,+89150+Laichingen/@48.4899986,9.6696289,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x479977e01269a341:0x773bf99f29081b09!2m2!1d9.7046482!2d48.489947!3e0"><i
                             class="fas fa-location-arrow"></i></a></div>
-                <div class="col-sm-11 addresstext ">  Gottlieb-Daimler-Straße 19
+                <div class="col-sm-11 col-xs-10 addresstext ">  Gottlieb-Daimler-Straße 19
                     <br />
                     89150 Laichingen</div>
-                <div class="col-sm-1 addressicons"><i class="fas fa-phone"></i></div>
-                <div class="col-sm-11 addresstext"> <a href="tel:+4973339651-0">+49 7333 9651-0</a>
+                <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-phone"></i></div>
+                <div class="col-sm-11 col-xs-10 addresstext"> <a href="tel:+4973339651-0">+49 7333 9651-0</a>
                 </div>
-                <div class="col-sm-1 addressicons"><i class="fas fa-fax"></i></div>
-                <div class="col-sm-11 addresstext"> +49 7333 9651-4000</div>
-                <div class="col-sm-1 addressicons"><i class="fas fa-envelope"></i></div>
-                <div class="col-sm-11 addresstext"> <a href="mailto:info@aliud.de">info@aliud.de</a>  
+                <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-fax"></i></div>
+                <div class="col-sm-11 col-xs-10 addresstext"> +49 7333 9651-4000</div>
+                <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-envelope"></i></div>
+                <div class="col-sm-11 col-xs-10 addresstext"> <a href="mailto:info@aliud.de">info@aliud.de</a>  
                     </div>
-                <div class="col-sm-1 addressicons"><i class="fas fa-globe"></i></div>
-                <div class="col-sm-11 addresstext"> <a href="https://www.aliud.de/">https://www.aliud.de/</a></div>
+                <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-globe"></i></div>
+                <div class="col-sm-11 col-xs-10 addresstext"> <a href="https://www.aliud.de/">https://www.aliud.de/</a></div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-offset-3 col-xs-6">
             <img class="img-responsive" src="/assets/images/company/aliud_pharma.png" />
         </div>
     </div>
@@ -570,19 +570,19 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic, addre
 <div class="row">
     <h3>Hersteller </h3>
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-9 col-xs-12">
             <div class="row">
-                <div class="col-sm-1 addressicons"><i class="fas fa-building"></i></div>
-                <div class="col-sm-11 addresstext"> STADA Arzneimittel AG</div>
-                <div class="col-sm-1 addressicons"><a target="_blank"
+                <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-building"></i></div>
+                <div class="col-sm-11 col-xs-10 addresstext"> STADA Arzneimittel AG</div>
+                <div class="col-sm-1 col-xs-2 addressicons"><a target="_blank"
                     href="https://www.google.com/maps/dir//STADA+Arzneimittel+AG,+Stadastra%C3%9Fe+2+-+18,+61118+Bad+Vilbel/@50.2025518,8.7100077,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x47bd055e775a5881:0xb95e3aa98e269e66!2m2!1d8.745027!2d50.2025021!3e0"><i
                         class="fas fa-location-arrow"></i></a></i></div>
-                <div class="col-sm-11 addresstext">  Stadastraße 2-18
+                <div class="col-sm-11 col-xs-10 addresstext">  Stadastraße 2-18
                     <br />
                     61118 Bad Vilbel</div>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-offset-3 col-xs-6">
             <img class="img-responsive" src="/assets/images/company/stada.png" />
         </div>
     </div>
