remove adverse effect class

--- a/src/main/frontend/sonstiges/enampril.html
+++ b/src/main/frontend/sonstiges/enampril.html
@@ -15,26 +15,69 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic) VALUE
     <div class="col-sm-6 nopadd">
         <div class="row">
             <div class="col-sm-12 info_notuse">
-                Allergie gegen Enalaprilmaleat, einen anderen ACE-Hemmer oder einen der sonstigen
-                Bestandteile, wie Croscarmellose-Natrium, Lactose-Monohydrat, Magnesiumstearat (Ph. Eur.),
-                vorverkleisterte Maisstärke, Natriumhydrogencarbonat dieses Arzneimittels sind
+                <div class="row">
+                    <div class="col-xs-10 nopadd">
+                        <b> Allergie gegen</b>
+                    </div>
+                    <div class="col-xs-2">
+                        <img width="32" src="./../../assets/disease/allergy.svg"></div>
+                </div>
+                <div class="row">
+                    <ul>
+                        <li>Enalaprilmaleat</li>
+                        <li>nderen ACE-Hemmer</li>
+                        <li>Croscarmellose-Natrium</li>
+                        <li>Lactose-Monohydrat</li>
+                        <li>Magnesiumstearat (Ph. Eur.)</li>
+                        <li>vorverkleisterte Maisstärke</li>
+                        <li>Natriumhydrogencarbonat</li>
+                    </ul>
+                </div>
+
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12 info_notuse"> Wenn bei Ihnen während einer früheren Behandlung mit einem
-                ACE-Hemmer
-                Gewebeschwellungen (angioneurotische Ödeme) auftraten wenn Sie eine vererbte Neigung zu
-                Gewebeschwellungen oder Gewebeschwellungen aus unbekannter Ursache haben (hereditäres oder
-                idiopathisches Angioödem)</div>
+            <div class="col-sm-12 info_notuse">
+                <div class="row">
+                    <div class="col-xs-10 nopadd">
+                        <b>Gewebeschwellungen (angioneurotische Ödeme)</b>
+                        + </div>
+                    <div class="col-xs-2">
+                        <img width="32" src=" "></div>
+                </div>
+                <div class="row">
+                    <ul>
+                        <li>Wenn bei Ihnen während einer früheren Behandlung mit einem
+                            ACE-Hemmer
+                            Gewebeschwellungen (angioneurotische Ödeme) auftraten</li>
+                        <li>Wenn Sie eine vererbte Neigung zu
+                            Gewebeschwellungen oder Gewebeschwellungen aus unbekannter Ursache haben (hereditäres oder
+                            idiopathisches Angioödem)</li>
+                    </ul>
+                </div>
+
+            </div>
         </div>
+   
     </div>
     <div class="col-sm-6 nopadd">
         <div class="row">
-            <div class="col-sm-12 info_notuse">Wenn Sie mehr als drei Monate schwanger sind. (Es wird empfohlen,
+            <div class="col-sm-12 info_notuse">
+                <div class="row">
+                    <div class="col-xs-10 nopadd">
+                        <b>Wenn Sie mehr als drei Monate schwanger sind</b>
+                        </div>
+                    <div class="col-xs-2">
+                        <img width="32" src="./../../assets/disease/pregnant.svg"></div>
+                </div>
+                <div class="row">
+                    Es wird empfohlen,
                 Enalapril AL 5mg auch in der frühen Phase der Schwangerschaft nicht anzuwenden, siehe Abschnitt
-                Schwangerschaft, Stillzeit und Zeugungs-/Gebärfähigkeit).</div>
-        </div>
+                Schwangerschaft, Stillzeit und Zeugungs-/Gebärfähigkeit
+                </div>
 
+            </div>
+        </div>
     </div>
 </div>
 <div>
@@ -389,7 +432,7 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic) VALUE
                         Arzneimittel angewendet haben oder beabsichtigen, andere Arzneimittel anzuwenden.
                         Einige Arzneimittel können in ihrer Wirkung durch Enalapril AL beeinflusst werden, sowie auch
                         andere
-                        Arzneimittel die Wirkung von Enalapril AL beeinflussen können. 
+                        Arzneimittel die Wirkung von Enalapril AL beeinflussen können.
                     </div>
                     <b> Daher ist es wichtig, Ihren Arzt
                         oder
@@ -547,7 +590,7 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic, addre
                 <div class="col-sm-1 col-xs-2 addressicons"><a target="_blank"
                         href="https://www.google.com/maps/dir//ALIUD+PHARMA+GmbH,+Gottlieb-Daimler-Stra%C3%9Fe+19,+89150+Laichingen/@48.4899986,9.6696289,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x479977e01269a341:0x773bf99f29081b09!2m2!1d9.7046482!2d48.489947!3e0"><i
                             class="fas fa-location-arrow"></i></a></div>
-                <div class="col-sm-11 col-xs-10 addresstext ">  Gottlieb-Daimler-Straße 19
+                <div class="col-sm-11 col-xs-10 addresstext "> Gottlieb-Daimler-Straße 19
                     <br />
                     89150 Laichingen</div>
                 <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-phone"></i></div>
@@ -556,10 +599,11 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic, addre
                 <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-fax"></i></div>
                 <div class="col-sm-11 col-xs-10 addresstext"> +49 7333 9651-4000</div>
                 <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-envelope"></i></div>
-                <div class="col-sm-11 col-xs-10 addresstext"> <a href="mailto:info@aliud.de">info@aliud.de</a>  
-                    </div>
+                <div class="col-sm-11 col-xs-10 addresstext"> <a href="mailto:info@aliud.de">info@aliud.de</a>
+                </div>
                 <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-globe"></i></div>
-                <div class="col-sm-11 col-xs-10 addresstext"> <a href="https://www.aliud.de/">https://www.aliud.de/</a></div>
+                <div class="col-sm-11 col-xs-10 addresstext"> <a href="https://www.aliud.de/">https://www.aliud.de/</a>
+                </div>
             </div>
         </div>
         <div class="col-md-3 col-xs-offset-3 col-xs-6">
@@ -575,9 +619,9 @@ INSERT INTO packaging_section (id, state, text, iddrug, idpackaging_topic, addre
                 <div class="col-sm-1 col-xs-2 addressicons"><i class="fas fa-building"></i></div>
                 <div class="col-sm-11 col-xs-10 addresstext"> STADA Arzneimittel AG</div>
                 <div class="col-sm-1 col-xs-2 addressicons"><a target="_blank"
-                    href="https://www.google.com/maps/dir//STADA+Arzneimittel+AG,+Stadastra%C3%9Fe+2+-+18,+61118+Bad+Vilbel/@50.2025518,8.7100077,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x47bd055e775a5881:0xb95e3aa98e269e66!2m2!1d8.745027!2d50.2025021!3e0"><i
-                        class="fas fa-location-arrow"></i></a></i></div>
-                <div class="col-sm-11 col-xs-10 addresstext">  Stadastraße 2-18
+                        href="https://www.google.com/maps/dir//STADA+Arzneimittel+AG,+Stadastra%C3%9Fe+2+-+18,+61118+Bad+Vilbel/@50.2025518,8.7100077,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x47bd055e775a5881:0xb95e3aa98e269e66!2m2!1d8.745027!2d50.2025021!3e0"><i
+                            class="fas fa-location-arrow"></i></a></i></div>
+                <div class="col-sm-11 col-xs-10 addresstext"> Stadastraße 2-18
                     <br />
                     61118 Bad Vilbel</div>
             </div>
